# npu-router

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/npu-cli/: Cargo.toml
crates/npu-core/: Cargo.toml
crates/npu-core/src/: lib.rs
crates/npu-ort/: Cargo.toml
crates/npu-ort/src/: lib.rs
crates/npu-qnn/: Cargo.toml
crates/npu-qnn/src/: lib.rs
crates/npu-sdk/: Cargo.toml
crates/npu-sdk/src/: lib.rs
crates/npu-server/: Cargo.toml
crates/npu-tasks/: Cargo.toml
crates/npu-tasks/src/: lib.rs
docs/: IDEA.md  PROMPT.md  SPEC.md
scripts/: check-crate-boundaries.mjs
tests/: check-crate-boundaries.test.mjs
