[workspace]
members = [
    "crates/npu-core",
    "crates/npu-ort",
    "crates/npu-qnn",
    "crates/npu-tasks",
    "crates/npu-sdk",
    "crates/npu-cli",
    "crates/npu-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
